--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,61 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+.nav {
+  height: 100px;
+}
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: linear-gradient(
+    217deg,
+    rgba(255, 0, 0, 0.8),
+    rgba(255, 0, 0, 0) 70.71%
+  );
+}
+
+.wrapper {
+  display: flex;
+  max-width: 1200px;
+  padding: 40px;
+}
+
+.logo {
+  width: 70px;
+  height: 70px;
+  margin-left: 10px;
+  margin-top: 10px;
+}
+
+.btns {
+  margin-right: 20px;
+}
+
+.login-btn {
+  padding: 10px 20px;
+  margin-top: 20px;
+  border-radius: 6px;
+  border: 1px solid #d74b69;
+  color: #d74b69;
+  background-color: white;
+  cursor: pointer;
+}
+
+.login-btn.right {
+  margin-left: 5px;
+}
+
+.feed {
+  display: flex;
+  justify-content: left;
+}
+
+.feed li {
+  list-style: none;
+  margin-right: 20px;
+  text-transform: uppercase;
+  color: #d74b69;
+  border-bottom: 2px solid white;
+}
