--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,10 @@
   padding: 40px;
 }
 
+.info p {
+  margin: 10px 0;
+}
+
 .logo {
   width: 70px;
   height: 70px;
@@ -37,7 +41,7 @@
 
 .login-btn {
   padding: 10px 20px;
-  margin-top: 20px;
+
   border-radius: 6px;
   border: 1px solid #d74b69;
   color: #d74b69;
@@ -59,5 +63,104 @@
   margin-right: 20px;
   text-transform: uppercase;
   color: #d74b69;
-  border-bottom: 2px solid white;
+}
+
+.feed li a {
+  color: #d74b69;
+  text-decoration: none;
+  font-size: 20px;
+}
+
+.card {
+  width: 300px;
+  border: 1px solid #ccc;
+  box-shadow: 5px -5px rgb(83, 83, 83);
+  margin: 60px auto;
+  border-radius: 4px;
+}
+
+.card-img {
+  overflow: hidden;
+  height: 200px;
+  width: 300px;
+  object-fit: cover;
+}
+
+.card-content {
+  padding: 20px 10px;
+}
+
+.card-title {
+  margin-bottom: 5px;
+}
+
+.card-btn {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding-bottom: 10px;
+}
+
+.card-btn .delete {
+  transition: all ease-out 0.3s;
+}
+
+.card-btn .delete:hover {
+  color: white;
+  background: #d74b69;
+}
+
+.edit-btn {
+  background: slategray;
+  color: white;
+  border: none;
+}
+
+.form {
+  display: grid;
+  grid-template-columns: 1fr;
+  width: 600px;
+  margin: 20px auto;
+}
+
+.form h2 {
+  margin-bottom: 20px;
+  text-align: center;
+}
+.form label {
+  font-weight: 600;
+  margin-bottom: 3px;
+}
+.form input {
+  padding: 8px 4px;
+  margin-bottom: 10px;
+}
+
+.submit-btn {
+  width: 20%;
+  padding: 10px 20px;
+  margin: 20px auto;
+  border-radius: 6px;
+  border: none;
+  color: white;
+  background-color: #d74b69;
+  text-transform: uppercase;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.error {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 30px auto;
+}
+
+.error img {
+  width: 300px;
+  height: 300px;
+}
+
+.error h3 {
+  margin-bottom: 10px;
 }
